@@ -7,66 +7,65 @@ import java.util.List;
 import com.badlogic.gdx.graphics.g2d.TextureAtlas;
 import com.badlogic.gdx.graphics.g2d.TextureRegion;
 
-public class Deck{
+public class Deck {
 	private ArrayList<Card> cards = new ArrayList<Card>();
 
-
-	public Deck(boolean shuffle,TextureAtlas atlas){
-		for(Suit suit: Suit.values()){
-            		for(Pip pip : Pip.values()){
-		    		if(pip.index < 6){ // Set to 6 for normal game
-				continue;
+	public Deck(boolean shuffle, TextureAtlas atlas) {
+		for (Suit suit : Suit.values()) {
+			for (Pip pip : Pip.values()) {
+				if (pip.index < 6) { // Set to 6 for normal game
+					continue;
 				}
-			TextureRegion front = atlas.findRegion("card_" + suit.name, pip.index);
-			TextureRegion back = atlas.findRegion("card_back");
-			Card card = new Card(pip,suit,front,back);
-			card.turn(true);
-			card.setPosition(Position.DECK.x, Position.DECK.y);
-			cards.add(card);
+				TextureRegion front = atlas.findRegion("card_" + suit.name, pip.index);
+				TextureRegion back = atlas.findRegion("card_back");
+				Card card = new Card(pip, suit, front, back);
+				card.turn(true);
+				card.setPosition(Position.DECK.x, Position.DECK.y);
+				cards.add(card);
 			}
 		}
-		if(shuffle){
+		if (shuffle) {
 			Collections.shuffle(cards);
 		}
 
 	}
 
-
-	public void remove(int index){
+	public void remove(int index) {
 		cards.remove(index);
 	}
-	public void remove(Card card){
+
+	public void remove(Card card) {
 		cards.remove(card);
 	}
 
-	public void add(Card card){
+	public void add(Card card) {
 		cards.add(card);
 	}
 
-	public int size(){
+	public int size() {
 		return cards.size();
 	}
 
-	public Card get(int index){
+	public Card get(int index) {
 		return cards.get(index);
 	}
 
-	public List<Card> getAll(){
+	public List<Card> getAll() {
 		return cards;
 	}
 
-	public Card drawLast(){
-		//Card card = cards.getLast(); java 8 doesnt support sadge
-        Card card = cards.get(cards.size() - 1);
+	public Card drawLast() {
+		// Card card = cards.getLast(); java 8 doesnt support sadge
+		Card card = cards.get(cards.size() - 1);
 		cards.remove(card);
 		return card;
 	}
 
-	public boolean hasCards(){
+	public boolean hasCards() {
 		return !cards.isEmpty();
 	}
 
-	public void shuffle(){
+	public void shuffle() {
 		Collections.shuffle(cards);
 	}
 
